--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,6 @@
+server:
+  port: 8080
+
 spring:
   datasource:
     url: jdbc:mysql://localhost:3306/test?useUnicode=true&characterEncoding=utf8&useSSL=false
@@ -5,8 +8,8 @@ spring:
     password: 12345678
     driver-class-name: com.mysql.cj.jdbc.Driver
 
-
 mybatis:
-    type-aliases-package: com.example.demo.entity
-    mapper-locations: classpath:mapper/*.xml
-#    config-location: classpath:config/mapper_config.xml
+  type-aliases-package: com.example.demo.entity
+  mapper-locations: classpath*:mapper/*.xml
+
+  #    config-location: classpath:config/mapper_config.xmlz
