--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,11 +1,14 @@
 server:
-  port: 8080
+  port: 19527
 
 spring:
   datasource:
     url: jdbc:mysql://localhost:3306/test?useUnicode=true&characterEncoding=utf8&useSSL=false
-    username: root
-    password: 12345678
+#    url: jdbc:mysql://111.67.194.169:3306/test?useUnicode=true&characterEncoding=utf8&useSSL=false
+#    username: root
+    username: test
+#    password: 12345678
+    password: wtf5201314
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     show-sql: true
